fixed gap on start page

--- a/sofia-curator/src/Components/_CarouselComponent.scss
+++ b/sofia-curator/src/Components/_CarouselComponent.scss
@@ -2,66 +2,74 @@
 
 
 
-.CarouselComponent {
-    padding-bottom: 3rem;
-}
 
-.sliderimg{
-    width: 50%;
-    height: 500px;
-    object-fit: cover;
-    h5 {
-        font-family: 'Righteous', cursive;
-        font-size: 2.7rem;
-        text-align: center;
+
+    .CarouselComponent {
+        padding-bottom: 2rem;
+    
     }
-    p {
-        font-family: 'Righteous', cursive;
-        font-size: 1.8rem;
-        text-align: center;
+    .sliderimg{
+        width: 50%;
+        height: 500px;
+        object-fit: cover;
+        h5 {
+            font-family: 'Righteous', cursive;
+            font-size: 2.7rem;
+            text-align: center;
+        }
+        p {
+            font-family: 'Righteous', cursive;
+            font-size: 1.8rem;
+            text-align: center;
+        }
+        a {
+            
+            color: black;
+            // text-decoration: none;
+        }
     }
-    a {
-        
-        color: black;
-        // text-decoration: none;
+    
+    
+    .sliderimg2{
+          width: 100%;
+          height: 500px;
     }
-}
+    .sliderimg3 {
+        border: 3px solid $skrutt-tan-dark;
+        height: 494px;
+    }
+    
+    .bg-faded-tan {
+        background-color: $skrutt-tan-light;
+    }
+    .slider-pair {
+      
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .my-art-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
 
-.sliderimg2{
-      width: 100%;
-      height: 500px;
-}
-.sliderimg3 {
-    border: 3px solid $skrutt-tan-dark;
-    height: 494px;
-}
 
-.bg-faded-tan {
-    background-color: $skrutt-tan-light;
-}
-.slider-pair {
-    display: flex;
-}
-.my-art-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.alice-carousel__dots {
-    size: 10rem !important;
-}
+
 
 
 @media only screen and (min-width: 1200px) {
     .sliderimg{
-        width: 50%;
+        margin: 0;
+        min-width: 50%;
         height: 700px;
         object-fit: cover;
     }
     .sliderimg2{
-        width: 100%;
+        width: 99%;
         height: 700px;
+        margin: 0;
   }
   .sliderimg3 {
       border: 3px solid $skrutt-tan-dark;
