--- a/sofia-curator/src/Components/_Navbar.scss
+++ b/sofia-curator/src/Components/_Navbar.scss
@@ -56,10 +56,26 @@
     margin-top: 2rem;
     width: 10rem;
   }
-  .nav-link {
+
+  @media only screen and (min-width: 992px) {
+    .nav-link {
+      font-family: 'Righteous', cursive;
+      text-decoration: none;
+      margin-left: 1.4rem;
+      font-size: 1rem;
+      color: $skrutt-green-dark;
+    }
+  }
+
+
+  @media only screen and (min-width: 1200px) {
+
+    .nav-link {
+    font-family: 'Righteous', cursive;
     text-decoration: none;
     margin-left: 1.4rem;
     font-size: 1.7rem;
     color: $skrutt-green-dark;
-    // padding-bottom: 5rem;
   }
+    }
+  
